# pyfa-converter-v2

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yml
pyfa_converter_v2/: __init__.py  depends.py  main.py
tests/: conftest.py  fastapi_app.py  main_test.py
